# chicken-killer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_cn.md  resource.h  resources.rc  vcpkg.json
.github/workflows/: build.yml
include/: animation.h  atlas.h  battery.h  boom.h  bullet.h  camera.h  chicken.h  chicken_fast.h  chicken_medium.h  chicken_slow.h  config.h  statusBar.h  timer.h  vector2.h
src/: config.cpp  main.cpp  statusBar.cpp
